--- a/css/main.css
+++ b/css/main.css
@@ -83,12 +83,12 @@ body .container section:nth-of-type(2) {
 body .container section #badgeLabel {
   position: relative;
   top: 5vh;
-  left: 5vw;
+  text-align: center;
 }
 body .container section #badgeContainer {
   position: relative;
   top: 7vh;
-  width: 50vw;
+  width: 100vw;
   height: auto;
   display: grid;
   place-items: center;
@@ -111,7 +111,10 @@ body .container section #skills ul {
 body .container section #skills ul li {
   background-color: #fff;
   color: black;
-  width: auto;
+  display: inline-block;
+  vertical-align: top;
+  height: auto;
+  width: 100px;
 }
 body .container section p {
   font-size: 2vw;
@@ -143,6 +146,7 @@ a {
   left: 5%;
   color: #434656;
   text-align: left;
+  z-index: 1;
   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */ /* Firefox < 16 */ /* Internet Explorer */ /* Opera < 12.1 */
   animation: fadein 2s;
 }
@@ -376,8 +380,8 @@ a {
 #modal-container {
   position: fixed;
   display: table;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   top: 0;
   left: 0;
   transform: scale(0);
