--- a/css/main.scss
+++ b/css/main.scss
@@ -115,12 +115,13 @@ body {
             #badgeLabel {
               position: relative;
               top: 5vh;
-              left: 5vw;
+              //left: 5vw;
+              text-align: center;
             }
             #badgeContainer {
               position: relative;
               top: 7vh;
-              width: 50vw;
+              width: 100vw;
               height: auto;
               display: grid;
               place-items: center;
@@ -145,7 +146,13 @@ body {
                 li {
                   background-color: #fff;
                   color: black;
-                  width: auto;
+                  //width: auto;
+
+                  // border: 1px solid blue;
+                  display: inline-block;
+                  vertical-align: top;
+                  height: auto;
+                  width: 100px;
                 }
               }
             }
@@ -193,6 +200,7 @@ a {
         left: 5%;
         color: #434656;
         text-align: left;
+        z-index: 1;
     
         -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
            -moz-animation: fadein 2s; /* Firefox < 16 */
@@ -430,8 +438,8 @@ a {
 #modal-container {
     position:fixed;
     display:table;
-    height:100%;
-    width:100%;
+    height:100vh;
+    width:100vw;
     top:0;
     left:0;
     transform:scale(0);
